Preparing for Hytale Update 3 and my refactor of components and systems and API addition